<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="8dp"
    tools:context=".activity.DetailUserActivity"
    tools:layout_editor_absoluteX="-9dp"
    tools:layout_editor_absoluteY="0dp">

    <ImageView
        android:id="@+id/img_item_avatar"
        android:layout_width="147dp"
        android:layout_height="147dp"
        android:layout_marginBottom="8dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.011"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.008"
        tools:ignore="ContentDescription"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="234dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/img_item_avatar"
        android:fontFamily="@font/free_sans_bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="17sp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.277"
        card_view:layout_constraintStart_toEndOf="@+id/img_item_avatar"
        card_view:layout_constraintTop_toTopOf="@+id/img_item_avatar"
        tools:text="@string/name" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="25dp"
        card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
        card_view:layout_constraintStart_toStartOf="@+id/tv_item_username"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_item_location">

        <ImageView
            android:id="@+id/va_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="2dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_item_company"
            android:layout_width="213dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/va_work"
            android:ellipsize="marquee"
            android:fontFamily="@font/free_sans"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="16sp"
            tools:text="@string/company" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_item_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/tv_item_name"
        android:fontFamily="@font/free_sans"
        android:textSize="16sp"
        card_view:layout_constraintBottom_toBottomOf="@+id/img_item_avatar"
        card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
        card_view:layout_constraintVertical_bias="0.0"
        tools:text="@string/username" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        card_view:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        card_view:layout_constraintStart_toStartOf="@+id/relativeLayout"
        card_view:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <TextView
            android:id="@+id/tv_item_following"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/free_sans_bold"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="222dp"
            tools:text="@string/following" />

        <TextView
            android:id="@+id/tv_item_followers"
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/free_sans_bold"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="270dp"
            tools:layout_editor_absoluteY="223dp"
            tools:text="@string/followers" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_item_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/free_sans"
        android:textSize="16sp"
        card_view:layout_constraintEnd_toEndOf="@+id/tv_item_username"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="@+id/tv_item_username"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_item_username"
        tools:ignore="MissingConstraints"
        tools:text="@string/location" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="331dp"
        android:layout_height="41dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/button_round"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/free_sans_bold"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/BtnShare"
        android:textColor="@color/palette_white"
        android:textSize="14sp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.027"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/img_item_avatar"
        tools:ignore="ContentDescription,UnusedAttribute,TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/btn_share">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabFollow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/palette_blue"
            card_view:tabTextColor="@color/palette_white"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.viewpager.widget.ViewPager>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        card_view:layout_constraintBottom_toBottomOf="@+id/viewPager"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.554"
        tools:visibility="visible" />

    <ToggleButton
        android:id="@+id/toggle_favorite"
        android:layout_width="45dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/favorite_toggle"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn=""
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>